fix searches page error, add loading animation

--- a/public/500.html
+++ b/public/500.html
@@ -18,10 +18,9 @@
   </head>
 
   <body>
-    <!-- This file lives in public/500.html -->
     <div class="error">
-      <img src="/500.png" />
-      <p>Internal Server Error</p>
+      <img src="./500.png" />
+      <p>サーバーエラーが発生しました。</p>
     </div>
   </body>
 </html>
