fixed 404 and 500, remove loading animation

--- a/public/404.html
+++ b/public/404.html
@@ -19,7 +19,7 @@
 
   <body>
     <div class="error">
-      <img src="./404.png" />
+      <img src="/app/assets/images/404.png" />
       <p>お探しのページは見つかりません。</p>
     </div>
   </body>
