--- a/public/500.html
+++ b/public/500.html
@@ -19,7 +19,7 @@
 
   <body>
     <div class="error">
-      <img src="./500.png" />
+      <img src="/app/assets/images/500.png" />
       <p>サーバーエラーが発生しました。</p>
     </div>
   </body>
